Fixed layout alignment with sidebar

--- a/public/styles/_layout.scss
+++ b/public/styles/_layout.scss
@@ -19,8 +19,10 @@
 	}
 	@include media-breakpoint-up(xl){
 		display: grid;
+		align-items: start;
 		padding-left: 0;
 		grid-template-columns: 230px minmax(0,1fr);
+		grid-template-rows: auto 1fr;
 		grid-template-areas: 'sidebar breadcrumb' 'sidebar mainbody';
 		//grid-gap: $grid-gutter-width/2;
 		
